# system-emul-sim

./: .gitignore  .mcp.json  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  IT01_IT02_Analysis_Report.md  LICENSE.md  OPERATIONS.md  QUICKSTART.md  README.md  README_AUDIT_REPORT.md  WBS.md  X-ray_Detector_Optimal_Project_Plan.md  X-ray_Detector_Optimal_Project_Plan_v2.1.md  check_detailed.ps1  check_gui.ps1  check_gui_simple.ps1  launch_and_verify.ps1  restart_gui.ps1  run_gui_direct.ps1  verify_ui.ps1  wait_and_verify.ps1
.claude/: settings.json
.claude/agent-memory/manager-quality/: MEMORY.md
.claude/agents/moai/: builder-agent.md  builder-plugin.md  builder-skill.md  expert-backend.md  expert-chrome-extension.md  expert-debug.md  expert-devops.md  expert-frontend.md  expert-performance.md  expert-refactoring.md  expert-security.md  expert-testing.md  manager-ddd.md  manager-docs.md  manager-git.md  manager-project.md  manager-quality.md  manager-spec.md  manager-strategy.md  manager-tdd.md  team-analyst.md  team-architect.md  team-backend-dev.md  team-designer.md  team-frontend-dev.md  team-quality.md  team-researcher.md  team-tester.md
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-notification.sh  handle-permission-request.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-teammate-idle.sh  handle-user-prompt-submit.sh  handle-worktree-create.sh  handle-worktree-remove.sh
.claude/output-styles/moai/: moai.md  r2d2.md  yoda.md
.claude/skills/moai-design-tools/: SKILL.md
.claude/skills/moai-docs-generation/: SKILL.md
.claude/skills/moai-domain-backend/: SKILL.md
.claude/skills/moai-lang-cpp/: SKILL.md
.github/workflows/: ci.yml  e2e-tests.yml
.moai/: status_line.sh
.moai/docs/: optimization-directives.md  spec-optimization-analysis.md
.moai/issues/: E2E-DEBUG-001.md
.moai/plans/: abundant-petting-falcon.md  delightful-wiggling-nebula.md  distributed-jingling-hellman.md  mossy-cuddling-hinton.md  noble-wibbling-cook.md  tranquil-chasing-harbor.md
.moai/project/: product.md  structure.md  tech.md
.moai/reports/: crossvalidation-guitools-001.md  optimal-plan-guitools-001.md  strategy-guitools-001.md  sync-20260218-080114.md  sync-report-20260218-185121.md  sync-report-SPEC-INTSIM-001-2026-03-11_12-15-38.md
config/: detector_config.dts  detector_config.json  detector_config.xdc  detector_config.yaml
config/schema/: detector-config-schema.json
docs/: hw-verification-guide.md  references && mv CUsersuser.claudeprojectsD--workspace-github-system-emul-simmemoryquality-management.md Dworkspace-githubsystem-emul-simdocsreferences  references && mv CUsersuser.claudeprojectsD--workspace-github-system-emul-simmemoryrisk-management.md Dworkspace-githubsystem-emul-simdocsreferences
docs/api/: Common.Dto.md  csi2-packet-format.md  ethernet-protocol.md  host-sdk-api.md  spi-register-map.md
docs/architecture/: fpga-design.md  host-sdk-design.md  soc-firmware-design.md  system-architecture.md
docs/config/: conversion-mapping.md
docs/guides/: deployment-guide.md  development-setup.md  firmware-build-guide.md  fpga-build-guide.md  installation-guide.md  sdk-build-guide.md  simulator-build-guide.md  tool-usage-guide.md  troubleshooting-guide.md  user-manual.md
docs/project/: glossary.md  roadmap.md
docs/references/: ai-agent-orchestration.md  quality-management.md  risk-management.md
docs/testing/: hil-test-plan.md  integration-test-plan.md  unit-test-plan.md  verification-strategy.md
fpga/: IMPLEMENTATION_REPORT.md  Makefile  csi2_detector_top.sv
fpga/rtl/: csi2_tx_wrapper.sv  line_buffer.sv  panel_scan_fsm.sv  protection_logic.sv  spi_slave.sv
fpga/sim/: run_sim.sh
fpga/tb/: README.md  TESTBENCH_SPEC.md  csi2_detector_top_tb.sv  csi2_tx_wrapper_tb.sv  line_buffer_tb.sv  panel_scan_fsm_tb.sv  protection_logic_tb.sv  spi_slave_tb.sv
fw/: ARCHITECTURE.md  CMakeLists.txt  HW_DEPENDENT_TODOS.md  README.md  SECURITY_IMPROVEMENTS.md  TDD_Wave3_Report.md  TEST_GUIDE.md  WAVE3_SUMMARY.md  WAVE4_WAVE5_IMPLEMENTATION_REPORT.md  implementation-guide.md  test_report_wave2.md  verify_security_improvements.sh
fw/deploy/: detector-daemon_1.0.bb  detector.service
fw/include/: frame_manager.h  health_monitor.h  sequence_engine.h
fw/include/config/: config_loader.h
fw/include/hal/: bq40z50_driver.h  csi2_rx.h  eth_tx.h  spi_master.h
fw/include/protocol/: command_protocol.h  frame_header.h
fw/include/util/: crc16.h
fw/meta-detector/: README.md  setup-yocto-env.sh
fw/meta-detector/cmake/: yocto-toolchain.cmake
fw/meta-detector/conf/: layer.conf
fw/meta-detector/docs/: BUILD.md
fw/meta-detector/recipes-core/detector-daemon/: detector-daemon_1.0.0.bb
fw/meta-detector/recipes-core/images/: detector-image.bb
fw/meta-detector/recipes-core/packagegroups/: packagegroup-detector.bb
fw/src/: frame_manager.c  health_monitor.c  main.c  sequence_engine.c
fw/src/config/: config_loader.c
fw/src/hal/: bq40z50_driver.c  csi2_rx.c  eth_tx.c  spi_master.c
fw/src/protocol/: command_protocol.c  frame_header.c
fw/src/util/: crc16.c  log.c
fw/tests/: crc16_verification.md
fw/tests/integration/: test_integration.c
fw/tests/mock/: mock_sequence.c  mock_sequence.h  mock_spidev.c  mock_spidev.h  mock_v4l2.c  mock_v4l2.h  mock_yaml.c  mock_yaml.h
fw/tests/unit/: test_bq40z50_driver.c  test_command_protocol.c  test_config_loader.c  test_crc16.c  test_csi2_rx.c  test_frame_header.c  test_frame_manager.c  test_health_monitor.c  test_sequence_engine.c  test_spi_master.c
sdk/XrayDetector.Sdk/: XrayDetector.Sdk.csproj
sdk/XrayDetector.Sdk.Tests/: XrayDetector.Sdk.Tests.csproj
tools/Common/: README.md
tools/ConfigConverter/: ConfigConverter.slnx
tools/GUI.Application/: README.md  run_gui.bat
tools/HostSimulator/: HostSimulator.slnx
tools/IntegrationTests/: IntegrationTests.csproj  README.md
tools/McuSimulator/: McuSimulator.slnx
(+714 files in other folders)
